src/amd/vulkan/radv_cmd_buffer.c
@@ -2912,6 +2912,17 @@ radv_src_access_flush(struct radv_cmd_buffer *cmd_buffer,
 			if (flush_DB_meta)
 				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_DB_META;
 			break;
+		case VK_ACCESS_MEMORY_WRITE_BIT:
+			flush_bits |= RADV_CMD_FLAG_INV_L2 |
+				      RADV_CMD_FLAG_WB_L2 |
+				      RADV_CMD_FLAG_FLUSH_AND_INV_CB |
+				      RADV_CMD_FLAG_FLUSH_AND_INV_DB;
+
+			if (flush_CB_meta)
+				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_CB_META;
+			if (flush_DB_meta)
+				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_DB_META;
+			break;
 		default:
 			break;
 		}
@@ -2989,6 +3000,19 @@ radv_dst_access_flush(struct radv_cmd_buffer *cmd_buffer,
 				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_CB_META;
 			break;
 		case VK_ACCESS_DEPTH_STENCIL_ATTACHMENT_READ_BIT:
+			if (flush_DB)
+				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_DB;
+			if (flush_DB_meta)
+				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_DB_META;
+			break;
+		case VK_ACCESS_MEMORY_READ_BIT:
+			flush_bits |= RADV_CMD_FLAG_INV_VCACHE |
+				      RADV_CMD_FLAG_INV_SCACHE |
+			              RADV_CMD_FLAG_INV_L2;
+			if (flush_CB)
+				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_CB;
+			if (flush_CB_meta)
+				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_CB_META;
 			if (flush_DB)
 				flush_bits |= RADV_CMD_FLAG_FLUSH_AND_INV_DB;
 			if (flush_DB_meta)
